--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     def espresso_core_version = "3.3.0"
     def activity_version = "1.2.1"
     def lifecycle_version = "2.3.0"
+    def mdc_version = "1.3.0"
 
 
     implementation 'com.google.android.material:material:1.3.0'
@@ -59,7 +60,11 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation "com.google.android.material:material:$mdc_version"
+
+
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
