--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     def activity_version = "1.2.1"
     def lifecycle_version = "2.3.0"
     def mdc_version = "1.3.0"
-
+    def fragment_version = "1.3.1"
 
     implementation 'com.google.android.material:material:1.3.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -62,7 +62,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "com.google.android.material:material:$mdc_version"
-
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    implementation "androidx.activity:activity-ktx:$activity_version"
 
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
