--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     def lifecycle_version = "2.3.1"
     def mdc_version = "1.3.0"
     def fragment_version = "1.3.2"
+    def gson_version = "2.8.6"
 
     implementation 'com.google.android.material:material:1.3.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -64,6 +65,7 @@ dependencies {
     implementation "com.google.android.material:material:$mdc_version"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
     implementation "androidx.activity:activity-ktx:$activity_version"
+    implementation "com.google.code.gson:gson:$gson_version"
 
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
