--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,12 +45,12 @@ dependencies {
     def junit_version = "4.13.2"
     def ext_junit_version = "1.1.2"
     def espresso_core_version = "3.3.0"
-    def activity_version = "1.2.1"
-    def lifecycle_version = "2.3.0"
+    def activity_version = "1.2.2"
+    def lifecycle_version = "2.3.1"
     def mdc_version = "1.3.0"
+    def fragment_version = "1.3.2"
 
 
-    implementation 'com.google.android.material:material:1.3.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.core:core-ktx:$core_version"
@@ -62,7 +62,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "com.google.android.material:material:$mdc_version"
-
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
