--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     def mdc_version = "1.3.0"
     def fragment_version = "1.3.2"
     def gson_version = "2.8.6"
+    def navigation_version = "2.3.5"
 
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -65,6 +66,8 @@ dependencies {
     implementation "com.google.android.material:material:$mdc_version"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
     implementation "com.google.code.gson:gson:$gson_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
