--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,7 +71,7 @@ dependencies {
 
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
+    androidTestImplementation "androidx.test.espresso:$espresso_core_version"
 }
