--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,10 +48,11 @@ dependencies {
     def activity_version = "1.2.2"
     def lifecycle_version = "2.3.1"
     def mdc_version = "1.3.0"
-    def fragment_version = "1.3.2"
+    def fragment_version = "1.3.3"
     def gson_version = "2.8.6"
     def navigation_version = "2.3.5"
     def room_version = "2.3.0"
+    def okhttp_version = "4.9.1"
 
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -70,12 +71,13 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
     implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
     implementation "androidx.room:room-runtime:$room_version"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
 
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     kapt "androidx.room:room-compiler:$room_version"
 
 
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_core_version"
 }
