added buildTypes: release and debug to build.gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,17 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            manifestPlaceholders.usesCleartextTraffic = false
+        }
+        debug {
+            manifestPlaceholders.usesCleartextTraffic = true
+        }
+    }
 }
 
 dependencies {
