--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="${usesCleartextTraffic}">
-        <activity android:name=".AppActivity">
+        <activity android:name=".AppActivity"
+            android:windowSoftInputMode="adjustResize">
             <nav-graph android:value="@navigation/nav_main" />
 
             <intent-filter>
