--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,11 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             manifestPlaceholders.usesCleartextTraffic = false
+            buildConfigField "String", "BASE_URL", '"https://nmedia.herokuapp.com"'
         }
         debug {
             manifestPlaceholders.usesCleartextTraffic = true
+            buildConfigField "String", "BASE_URL", '"http://176.196.11.226:9999"'
         }
     }
 }
@@ -65,6 +67,7 @@ dependencies {
     def navigation_version = "2.3.5"
     def room_version = "2.3.0"
     def okhttp_version = "4.9.1"
+    def glide_version = "4.12.0"
 
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -84,6 +87,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
 
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     kapt "androidx.room:room-compiler:$room_version"
