--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ android {
 
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    def core_version = "1.3.2"
+    def core_version = "1.5.0"
     def appcompat_version = "1.3.0"
     def constraintlayout_version = "2.0.4"
     def recyclerview_version = "1.2.0"
@@ -66,8 +66,11 @@ dependencies {
     def gson_version = "2.8.6"
     def navigation_version = "2.3.5"
     def room_version = "2.3.0"
-    def okhttp_version = "4.9.1"
+//    def okhttp_version = "4.9.1" отключен из-за возможного конфликта с Retrofit
     def glide_version = "4.12.0"
+    def retrofit_version = "2.9.0"
+    def retrofitgson_version = "2.9.0"
+    def okhttploggin_version = "4.9.1"
 
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -86,8 +89,11 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
     implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
     implementation "androidx.room:room-runtime:$room_version"
-    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+//    implementation "com.squareup.okhttp3:okhttp:$okhttp_version" отключен из-за возможного конфликта с Retrofit
     implementation "com.github.bumptech.glide:glide:$glide_version"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitgson_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttploggin_version"
 
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     kapt "androidx.room:room-compiler:$room_version"
