--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,15 +55,15 @@ dependencies {
     def core_version = "1.5.0"
     def appcompat_version = "1.3.0"
     def constraintlayout_version = "2.0.4"
-    def recyclerview_version = "1.2.0"
+    def recyclerview_version = "1.2.1"
     def junit_version = "4.13.2"
     def ext_junit_version = "1.1.2"
     def espresso_core_version = "3.3.0"
     def activity_version = "1.2.3"
     def lifecycle_version = "2.3.1"
     def mdc_version = "1.3.0"
-    def fragment_version = "1.3.3"
-    def gson_version = "2.8.6"
+    def fragment_version = "1.3.4"
+    def gson_version = "2.8.7"
     def navigation_version = "2.3.5"
     def room_version = "2.3.0"
 //    def okhttp_version = "4.9.1" отключен из-за возможного конфликта с Retrofit
@@ -71,6 +71,7 @@ dependencies {
     def retrofit_version = "2.9.0"
     def retrofitgson_version = "2.9.0"
     def okhttploggin_version = "4.9.1"
+    def coroutines_version = "1.5.0"
 
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -94,6 +95,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitgson_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttploggin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     kapt "androidx.room:room-compiler:$room_version"
