--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     def coroutines_version = "1.5.0"
     def imagepicker_version = "2.1"
     def play_services_base_version = "17.6.0"
+    def firebase_version = "28.0.1"
 
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -105,6 +106,8 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation "com.github.dhaval2404:imagepicker:$imagepicker_version"
     implementation "com.google.android.gms:play-services-base:$play_services_base_version"
+    implementation platform("com.google.firebase:firebase-bom:$firebase_version")
+    implementation "com.google.firebase:firebase-messaging-ktx"
 
 
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
