--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,19 +51,19 @@ allprojects {
 }
 
 dependencies {
-    def core_version = "1.5.0"
+    def core_version = "1.6.0"
     def appcompat_version = "1.3.0"
     def constraintlayout_version = "2.0.4"
     def swiperefreshlayout_version = "1.1.0"
     def coordinatorlayout_version = "1.1.0"
     def recyclerview_version = "1.2.1"
     def junit_version = "4.13.2"
-    def ext_junit_version = "1.1.2"
-    def espresso_core_version = "3.3.0"
+    def ext_junit_version = "1.1.3"
+    def espresso_core_version = "3.4.0"
     def activity_version = "1.2.3"
     def lifecycle_version = "2.3.1"
     def mdc_version = "1.3.0"
-    def fragment_version = "1.3.4"
+    def fragment_version = "1.3.5"
     def gson_version = "2.8.7"
     def navigation_version = "2.3.5"
     def room_version = "2.3.0"
@@ -78,6 +78,7 @@ dependencies {
     def firebase_version = "28.0.1"
     def firebase_messages_version = "22.0.0"
     def legacy_support_v4 = "1.0.0"
+    def workmanager_version = "2.5.0"
 
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -112,6 +113,7 @@ dependencies {
     implementation "com.google.firebase:firebase-messaging-ktx"
     implementation "com.google.firebase:firebase-messaging:$firebase_messages_version"
     implementation "androidx.legacy:legacy-support-v4:$legacy_support_v4"
+    implementation "androidx.work:work-runtime-ktx:$workmanager_version"
 
 
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
