--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,7 @@ dependencies {
     def espresso_core_version = "3.4.0"
     def activity_version = "1.2.3"
     def lifecycle_version = "2.3.1"
-    def mdc_version = "1.3.0"
+    def mdc_version = "1.4.0"
     def fragment_version = "1.3.5"
     def gson_version = "2.8.7"
     def navigation_version = "2.3.5"
@@ -83,6 +83,7 @@ dependencies {
     def hilt_work_version = "1.0.0"
     def hilt_navigation_version = "1.0.0"
     def hilt_compiler_version = "1.0.0"
+    def paging_version = "3.0.0"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -120,6 +121,7 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     implementation "androidx.hilt:hilt-work:$hilt_work_version"
     implementation "androidx.hilt:hilt-navigation-fragment:$hilt_navigation_version"
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
 
 
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
